tests/fixtures/pass/drop_trap.sali
let Resource = struct(value: i32)

extend Resource: Drop {
  let drop(mut borrow self)(): () = {
    let trapped = 1 / self.value
  }
}

let main(): i32 = {
  let value = Resource(0)
  0
}
